# recad

./: .gitignore  Cargo.toml  Makefile  README.md  project-words.txt  pyproject.toml
.github/workflows/: doc.yml  rust.yml
crates/draw/: Cargo.toml
crates/draw/src/: lib.rs
crates/font/: Cargo.toml
crates/font/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: footprint.rs  geometry.rs  lib.rs  library.rs  pcb.rs  schema.rs  symbols.rs  transform.rs
crates/netlist/: Cargo.toml
crates/netlist/src/: circuit.rs  lib.rs
crates/ngspice/: Cargo.toml
crates/ngspice/src/: lib.rs
crates/plot/: Cargo.toml
crates/plot/src/: border.rs  egui_utils.rs  gerber.rs  lib.rs  pcb_plot.rs  pcb_plot_3d.rs  schema_plot.rs  shader.wgsl  shader_3d.wgsl  svg.rs  wgpu.rs  wgpu_3d.rs
crates/plot/src/theme/: blackwhite.rs  kicad2020.rs  mod.rs
crates/recad/: Cargo.toml
crates/recad/examples/: bom.rs  erc.rs  gerber.rs  netlist.rs  sim.rs  svg_plt.rs  wgpu.rs  wgpu_3d.rs
crates/recad/examples/common/: mod.rs  opamp.rs
crates/recad/src/: lib.rs
crates/recad/tests/: integration.rs  test.rs
crates/recad/tests/common/: mod.rs
crates/recad/tests/files/all_elements/: all_elements.kicad_prl  all_elements.kicad_pro  all_elements.kicad_sch  sheet.kicad_sch
crates/recad/tests/files/echo/: echo.kicad_prl  echo.kicad_pro  echo.kicad_sch
crates/recad/tests/files/summe/: summe.kicad_prl  summe.kicad_pro  summe.kicad_sch
crates/recad/tests/files/summe/gerber/: summe-B_Cu.gbr  summe-B_Mask.gbr  summe-B_Paste.gbr  summe-B_Silkscreen.gbr  summe-Edge_Cuts.gbr  summe-F_Cu.gbr  summe-F_Mask.gbr  summe-F_Paste.gbr  summe-F_Silkscreen.gbr  summe-job.gbrjob
crates/recad/tests/integration/: builder.rs  erc.rs  pcb.rs  rewrite.rs  schema.rs
crates/recad/tests/integration/plot/: all_elements.rs  mod.rs  summe.rs  symbols.kicad_sch  symbols.rs
crates/recad/tests/integration/plot/snapshots/: integration__integration__plot__all_elements__plot_all_elements_svg.snap  integration__integration__plot__summe__plot_summe_svg.snap  integration__integration__plot__symbols__plot_symbol_svg.snap  integration__integration__plot__symbols__rotation_and_justification_snapshot.snap
crates/reports/: Cargo.toml
crates/reports/src/: bom.rs  drc.rs  erc.rs  lib.rs
crates/sexp/: Cargo.toml
crates/sexp/src/: builder.rs  lib.rs  parser.rs  writer.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: constants.rs  disjointset.rs  error.rs  gr.rs  lib.rs
docs/: api.rst  cli.rst  index.rst  install.rst  schema.rst
samples/jupyter/: opamp.ipynb
samples/jupyter/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  opamp-checkpoint.ipynb
samples/python/: opamp.py
src/: draw.rs  gr.rs  lib.rs  netlist.rs  parser.rs  schema.rs  schema.rs.old  schema_ploter.rs  schema_reader.rs  schema_writer.rs
src/math/: bbox.rs  fonts.rs  mod.rs  transform.rs
src/netlist/: mod.rs
src/plot/: mod.rs  svg.rs
src/plot/theme/: mod.rs
src/sexp/: builder.rs  constants.rs  mod.rs  parser.rs  writer.rs
test/: test_schema.py
tests/: builder.rs  rewrite.rs  summe.kicad_sch  test.rs
