[package]
name = "recad"
version = "0.1.0"
edition = "2021"

[lib]
name = "recad"
crate-type = ["cdylib"]

[dependencies]
recad_core = { git = "https://github.com/spielhuus/recad_core.git" }
#recad_core = { path = "../recad_core" }
log = "0.4"
env_logger = "0.11"

[dependencies.pyo3]
version = "0.27"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
