[workspace]
members =[
  "crates/font",
  "crates/types",
  "crates/models",
  "crates/sexp",
  "crates/plot",
  "crates/draw",
  "crates/netlist",
  "crates/reports",
  "crates/ngspice",
  "crates/simulation",
  "crates/recad",
]
resolver = "2"

[workspace.dependencies]
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
spdlog-rs = { version = "0.5"}

#font dependencies
fontdue = "0.9"
ttf-parser = "0.21"
rust-fontconfig = "2"

# plotter dependencies
glam = "0.32"
svg  = "0.18"
base64 = "0.22"

# webgpu dependencies
winit = { version = "0.30", default-features = false, features = ["rwh_06", "wayland"]  }
wgpu = { version = "27.0.1", features = ["wgsl"] }
pollster = "0.4"
bytemuck = { version = "1.24", features = [ "derive" ] }

egui = { version = "0.33.3", default-features = false, features = ["default_fonts"] }
egui-winit = { version = "0.33.3", default-features = false }
egui-wgpu = { version = "0.33.3", default-features = false, features = ["winit"] }

# netlist
petgraph = "0.8"
indexmap = "2.2.6"
regex = "1"

#reports
yaml-rust = "0.4"

#ngspice
libloading = "0.8"

