[package]
name = "ngspice"
version = "0.1.0"
edition = "2021"


[dependencies]
types = { path = "../types" }
models = { path = "../models" }
netlist = { path = "../netlist" }

# uuid.workspace = true
# glam.workspace = true
spdlog-rs.workspace = true
libloading.workspace = true

[build-dependencies]
bindgen = "0"
