[package]
name = "plot"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
font = { path = "../font" }
models = { path = "../models" }

spdlog-rs.workspace = true
glam.workspace = true
fontdue.workspace = true
ttf-parser.workspace = true

svg.workspace = true
base64.workspace = true

# webgpu dependencies
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-wgpu.workspace = true


