[package]
name = "plot"
version = "0.1.0"
edition = "2021"

[features]
default = ["svg", "wgpu"]
svg = ["dep:svg", "dep:base64"]
wgpu = [
    "dep:winit",
    "dep:wgpu",
    "dep:pollster",
    "dep:bytemuck",
    "dep:egui",
    "dep:egui-winit",
    "dep:egui-wgpu"
]

[dependencies]
types = { path = "../types" }
font = { path = "../font" }
models = { path = "../models" }

spdlog-rs.workspace = true
glam.workspace = true
fontdue.workspace = true
ttf-parser.workspace = true

svg = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

winit = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
egui-winit = { workspace = true, optional = true }
egui-wgpu = { workspace = true, optional = true }
