[package]
name = "recad"
version = "0.1.0"
edition = "2021"

# Define the features users can toggle
# [features]
# default =["models", "svg", "reports"]
# spice = ["dep:recad_spice"]
# wgpu = ["recad_plot/wgpu"]
# svg = ["recad_plot/svg"]
# gerber = ["recad_plot/gerber"]
# reports = ["dep:recad_reports"]
# models = ["dep:recad_models"]

#font  models  plot  recad  reports  sexp  spice  types

[features]
default = ["svg", "wgpu"]
svg = ["plot/svg"]
wgpu = [
    "plot/wgpu",
    "dep:winit",
    "dep:wgpu",
    "dep:pollster",
    "dep:bytemuck",
    "dep:egui",
    "dep:egui-winit",
    "dep:egui-wgpu"
]


[dependencies]
# Required base dependencies
types = { path = "../types" }
sexp = { path = "../sexp" }
models = { path = "../models" }
draw = { path = "../draw" }
reports = { path = "../reports" }
netlist = { path = "../netlist" }
ngspice = { path = "../ngspice" }
simulation = { path = "../simulation" }

# recad_reports = { path = "../crates/reports" }
plot = { path = "../plot" }

spdlog-rs.workspace = true

winit = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
egui-winit = { workspace = true, optional = true }
egui-wgpu = { workspace = true, optional = true }


[dev-dependencies]
colored = "3"
similar = "2.7"
insta = { version = "1", features = ["yaml"] }

[[examples]]
name = "bom"
path = "examples/bom.rs"

[[examples]]
name = "erc"
path = "examples/erc.rs"

[[examples]]
name = "gerber"
path = "examples/gerber.rs"

[[examples]]
name = "sim"
path = "examples/sim.rs"

[[examples]]
name = "svg_plot"
path = "examples/svg_plot.rs"
required-features = ["svg"]

[[examples]]
name = "wgpu_3d"
path = "examples/wgpu_3d.rs"
required-features = ["wgpu"]

[[examples]]
name = "wgpu"
path = "examples/wgpu.rs"
required-features = ["wgpu"]

